objects/Perspective__c.object
<CustomObject>
    <description>This object holds the Perspective definitions.
Within the context of a Program Collection, given consumers may interpret the contents of that Program Collection differently: what one consumer takes as a collection of five Programs, for example, another may interpret as having only three Programs. Since both consumers will use the same terminology to describe the collection, the Perspective allows for a differentiation of the definition of that Program Collection by the intended use or consumer.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Drives availability for selection in Program Relationship only</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Perspectives</relationshipLabel>
        <relationshipName>Group_Purposes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>Ps{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Perspective</label>
    <listViews>
        <fullName>Active_Perspective</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Business_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Perspective</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Short_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Perspective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Perspectives</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>